--- a/00_vacaciones_ejercicio_02/config.json
+++ b/00_vacaciones_ejercicio_02/config.json
@@ -1,6 +1,6 @@
 {
 	"driver":"com.mysql.cj.jdbc.Driver",
-	"cadenaConexion":"jdbc:mysql://localhost:3306/bancabd?serverTimezone=UTC",
+	"cadenaConexion":"jdbc:mysql://localhost:3306/bancabd?serverTimezone=Europe/Madrid",
 	"user":"root",
 	"password":"Root"
 }
